# microgrep

./: Cargo.toml  README.md  index.md
argument_parser/: Cargo.toml
argument_parser/src/: collect_env_vars.rs  collect_flags.rs  lib.rs
basic_threadpool/: Cargo.toml
microgrep/: Cargo.toml
microgrep/src/: lib.rs  main.rs  minify_info.rs  time_taken.rs
recursive_file_check/: Cargo.toml
recursive_file_check/src/: MatchesInFile.rs  dir_traverser.rs  file_match_seacher.rs  lib.rs  matches_in_file.rs
test_dir/: test_file_1.txt  test_file_2.r
