[package]
name = "microgrep"
version = "0.1.0"
authors = ["Twaha Rahman <mahi6703890@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
recursive_file_check = { path = "../recursive_file_check" }
argument_parser = { path = "../argument_parser" }
